--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,14 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background: rgb(0, 150, 136);
+  background: linear-gradient(
+    180deg,
+    rgba(0, 150, 136, 1) 0%,
+    rgba(0, 150, 136, 1) 15%,
+    rgba(215, 219, 214, 1) 15%,
+    rgba(215, 219, 214, 1) 130%
+  );
 }
 
 a {
@@ -15,12 +23,12 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   html {
-    color-scheme: dark;
+    color-scheme: light;
   }
   body {
-    color: white;
-    background: black;
+    color: black;
+    background: white;
   }
 }
